Align swagger documentation
-Add examples in request parameters
-Add example responses

Issue-ID: SDC-3185
